@@ -56,7 +56,6 @@ import static com.openexchange.tools.update.Tools.existsIndex;
 import java.sql.Connection;
 import java.sql.SQLException;
 import org.apache.commons.logging.Log;
-import com.openexchange.log.LogFactory;
 import com.openexchange.database.DatabaseService;
 import com.openexchange.databaseold.Database;
 import com.openexchange.exception.OXException;
@@ -64,6 +63,7 @@ import com.openexchange.groupware.update.PerformParameters;
 import com.openexchange.groupware.update.UpdateExceptionCodes;
 import com.openexchange.groupware.update.UpdateTask;
 import com.openexchange.groupware.update.UpdateTaskAdapter;
+import com.openexchange.log.LogFactory;
 import com.openexchange.server.services.ServerServiceRegistry;
 
 /**
@@ -89,7 +89,7 @@ public final class CalendarAddUIDIndexTask extends UpdateTaskAdapter {
 
     @Override
     public String[] getDependencies() {
-        return new String[] { CalendarExtendDNColumnTask.class.getName() };
+        return new String[] { CalendarExtendDNColumnTask.class.getName(), EnlargeCalendarUid.class.getName() };
     }
 
     @Override
@@ -117,11 +117,10 @@ public final class CalendarAddUIDIndexTask extends UpdateTaskAdapter {
     private void createCalendarIndex(final Connection con, final String[] tables) {
         final Log log = com.openexchange.log.Log.valueOf(LogFactory.getLog(CalendarAddUIDIndexTask.class));
         final String name = "uidIndex";
-        final String[] columns = { "cid", "uid" };
         final StringBuilder sb = new StringBuilder(64);
         for (final String table : tables) {
             try {
-                final String indexName = existsIndex(con, table, columns);
+                final String indexName = existsIndex(con, table, new String[] { "cid", "uid" });
                 if (null == indexName) {
                     if (log.isInfoEnabled()) {
                         sb.setLength(0);
@@ -132,7 +131,7 @@ public final class CalendarAddUIDIndexTask extends UpdateTaskAdapter {
                         sb.append('.');
                         log.info(sb.toString());
                     }
-                    createIndex(con, table, name, columns, false);
+                    createIndex(con, table, name, new String[] { "cid", "uid(255)" }, false);
                 } else {
                     if (log.isInfoEnabled()) {
                         sb.setLength(0);
